--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,1 +1,5 @@
-<h1>Hello World</h1>
+<h1>{{title}}</h1>
+<form>
+    <input type="text" id="name"/>
+    <button id="submit">Submit</button>
+</form>
