--- a/views/fligths.handlebars
+++ b/views/fligths.handlebars
@@ -29,4 +29,31 @@
   </form>
   {{/each}}
 
+
+  {{#each flights2}}
+  <form>
+    <div class="form-group mb-2">
+      <input type="text" readonly class="form-control-plaintext" id="depart_date" value="{{formatted_day}}">
+    </div>
+
+    <div class="form-group mb-2">
+      <input type="text" readonly class="form-control-plaintext" id="depart_time" value="Departs: {{formatted_departure}}">
+    </div>
+    <div class="form-group mb-2">
+      <input type="text" readonly class="form-control-plaintext" id="arrival_time" value=" Arrives: {{formatted_arrival}}">
+    </div>
+    <div class="form-group mb-2">
+      <input type="text" readonly class="form-control-plaintext" id="depart_airpot" value="From: {{depart_airport}}">
+    </div>
+    <div class="form-group mb-2">
+      <input type="text" readonly class="form-control-plaintext" id="arrival_airport" value="To:  {{arrival_airport}}">
+    </div>
+    <div class="form-group mb-2">
+      <input type="text" readonly class="form-control-plaintext" id="price" value="Cost: ${{price}}">
+    </div>
+
+    <button type="submit" class="selectedFlight btn btn-primary mb-2" data-seats="{{seats_available}}" data-id="{{id}}">Buy</button>
+
+  </form>
+  {{/each}}
 </div>
