--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -20,15 +20,21 @@
         <option>Seatle</option>
       </select>
     </div>
+    <div class="form-group">
+      <label for="roundtrip">Sleepy?</label><br>
+      <input type="radio" name="rountt" value="0">One Way<br>
+      <input type="radio" name="rountt" value="1" checked> Round Trip
+    </div>
 
     <div class="form-group">
       <label for="Ddate">Depart Date</label>
-      <input type="date" class=" my-5 form-control end-date text-center p-3">
+      <input id="depart_date" type="date" class=" my-5 form-control end-date text-center p-3">
     </div>
     <div class="form-group">
-      <label for="Adate">Arrival Date</label>
-      <input type="date" class=" my-5 form-control end-date text-center p-3">
+      <label for="Adate">Returning Date</label>
+      <input id="returning_date" type="date" class=" my-5 form-control end-date text-center p-3">
     </div>
+
     <button type="submit" class="btn btn-primary">Search Flights</button>
   </form>
 
