--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <link rel="stylesheet" href="/assets/css/jet_style.css" type="text/css" />
-  <title>MVC With Cats!</title>
+  <title>Fly Away!</title>
   <script type="text/javascript" src="https://code.jquery.com/jquery.js"></script>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
     crossorigin="anonymous">
