--- a/views/reservation.handlebars
+++ b/views/reservation.handlebars
@@ -22,3 +22,16 @@
   {{/each}}
 
 </div>
+
+<header id="home-section">
+  <div class="dark-overlay">
+    <div class="home-inner">
+      <div class="container">
+
+      </div>
+
+    </div>
+
+
+  </div>
+</header>
