--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -21,18 +21,6 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
     crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/ekko-lightbox/5.2.0/ekko-lightbox.js"></script>
-
-  <script type="text/javascript" src="/assets/js/public.js"></script>
-  <script>
-    $('.port-item').click(function () {
-      $('.collapse').collapse('hide');
-    });
-
-    $(document).on('click', '[data-toggle="lightbox"]', function (event) {
-      event.preventDefault();
-      $(this).ekkoLightbox();
-    });
-  </script>
 </head>
 
 <body>
@@ -75,6 +63,36 @@
   </footer>
 
   <!-- CONTACT MODAL -->
+
+  <script type="text/javascript" src="/assets/js/public.js"></script>
+  <script>
+    $('.port-item').click(function () {
+      $('.collapse').collapse('hide');
+    });
+
+    $('.sub-port-rt').click(function () {
+      $('#round-trip').collapse('show');
+      $('#one-way').collapse('hide');
+      $('.sub-port-rt').removeClass('bg-white text-dark');
+      $('.sub-port-rt').addClass('bg-dark text-white');
+      $('.sub-port-ow').addClass('bg-white text-dark');
+      $('.sub-port-ow').removeClass('bg-dark text-white');
+    });
+
+    $('.sub-port-ow').click(function () {
+      $('#one-way').collapse('show');
+      $('#round-trip').collapse('hide');
+      $('.sub-port-ow').removeClass('bg-white text-dark');
+      $('.sub-port-ow').addClass('bg-dark text-white');
+      $('.sub-port-rt').addClass('bg-white text-dark');
+      $('.sub-port-rt').removeClass('bg-dark text-white');
+    })
+
+    $(document).on('click', '[data-toggle="lightbox"]', function (event) {
+      event.preventDefault();
+      $(this).ekkoLightbox();
+    });
+  </script>
 
 </body>
 
