--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,193 +1,212 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<title>Let's Fly Away</title>
-	<link rel="stylesheet" href="css/style.css">
-	<meta name="viewport" content="width=device-width, initial-scale=1" />
-	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-	<script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } </script>
-		
-</head>
-<body>
-	<h1>Let's Fly Away</h1>
-	<div class="main-agileinfo">
-		<div class="sap_tabs">			
-			<div id="horizontalTab">
-				<ul class="resp-tabs-list">
-					<li class="resp-tab-item"><span>Book</span></li>
-					<li class="resp-tab-item"><span>Flight Status</span></li>
-					<li class="resp-tab-item"><span>Cancel Flight</span></li>				
-				</ul>	
-				<div class="clearfix"> </div>	
-				<div class="resp-tabs-container">
-					<div class="tab-1 resp-tab-content Book">
-						<form action="#" method="post">
-							<div class="from">
-								<h3>From</h3>
-								<input type="text" name="city" class="city1" placeholder="Type Departure" required="">
-							</div>
-							<div class="to">
-								<h3>To</h3>
-								<input type="text" name="city" class="city2" placeholder="Type Destination" required="">
-							</div>
-							<div class="clear"></div>
-							<div class="date">
-								<div class="depart">
-									<h3>Depart</h3>
-									 <input type="date" id="month" name="year">
-								</div>
-          
-								<div class="return">
-									<h3>Return</h3>
-									  <input type="date" id="month" name="year">
-								</div>
-								<div class="clear"></div>
-							</div>
-							
-							<div class="clear"></div>
-							<div class="numofppl">
-								<div class="adults">
-									<h3>Adult:(12+ yrs)</h3>
-									<div class="quantity"> 
-										<div class="quantity-select">                           
-											<div class="entry value-minus">&nbsp;</div>
-											<div class="entry value"><span>1</span></div>
-											<div class="entry value-plus active">&nbsp;</div>
-										</div>
-									</div>
-								</div>
-								<div class="child">
-									<h3>Child:(1-11 yrs)</h3>
-									<div class="quantity"> 
-										<div class="quantity-select">                           
-											<div class="entry value-minus">&nbsp;</div>
-											<div class="entry value"><span>0</span></div>
-											<div class="entry value-plus active">&nbsp;</div>
-										</div>
-									</div>
-								</div>
-								<div class="clear"></div>
-							</div>
-							<div class="clear"></div>
-							<input type="submit" value="Search Flights">
-						</form>						
-					</div>		
-					<div class="tab-1 resp-tab-content Flight">
-							<form action="#" method="post">
-									<div class="from">
-										<h3>From</h3>
-										<input type="text" name="city" class="city1" placeholder="Type Departure City" required="">
-									</div>
-									<div class="to">
-										<h3>To</h3>
-										<input type="text" name="city" class="city2" placeholder="Type Destination City" required="">
-									</div>
-									<div class="clear"></div>
-									<div class="date">
-										<h3>Date</h3>
-										<input  id="datepicker" name="Text" type="text" value="mm/dd/yyyy" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'mm/dd/yyyy';}" required="">
-										</div>
-										<div class="flight">
-											<h3>Flight Number</h3>
-											<input type="number" name="number" class="number" placeholder="Flight number" required="">
-											</div>
-										<div class="clear"></div>
-										<input type="submit" value="Search Flights">
-									</div>
-								</form>						
-							</div>								
-		
-					<div class="tab-1 resp-tab-content Cancel">
-									<form action="#" method="post">
-										<div class="from">
-											<h3>First Name</h3>
-											<input type="text" name="city" class="city1" placeholder="First Name" required="">
-										</div>
-										<div class="to">
-											<h3>Last Name</h3>
-											<input type="text" name="city" class="city2" placeholder="Last Name" required="">
-										</div>
-										<div class="clear"></div>
-										<div class="date">
-											<div class="depart">
-												<h3>Confirmation Number</h3>
-												<input type="number" name="number" class="number" placeholder="Number" required="">
-											</div>
-										</div>
-										<div class="clear"></div>
-										<input type="submit" value="Search Flights">
-									</div>
-								</form>						
-							</div>	
+<!-- main header-->
+<header id="home-section">
+  <div class="dark-overlay">
+    <div class="home-inner">
+      <div class="container">
+        <header id="main-header">
 
-              <h2 class="mt-5">Find your Reservation</h2>
-  <form class="form-inline find-reservation my-5">
-    <div class="form-group mx-sm-3 mb-2">
-      <label for="firstName" class="sr-only">FirstName</label>
-      <input type="text" class="form-control" id="firstName" placeholder="First Name">
-    </div>
-    <div class="form-group mx-sm-3 mb-2">
-      <label for="lastName" class="sr-only">LastName</label>
-      <input type="text" class="form-control" id="lastName" placeholder="Last Name">
-    </div>
-    <div class="form-group mx-sm-3 mb-2">
-      <label for="inputPassword2" class="sr-only">Email</label>
-      <input type="email" class="form-control" id="email" placeholder="Email">
-    </div>
-    <button type="submit" class="btn btn-primary mb-2">Search</button>
-  </form>
-</div>
-							
+          <div class="row">
 
-	<div class="footer-w3l">
-		<p class="agileinfo"> &copy; 2018 Fly Away Airlines</p>
-	</div>
-	<!--script for portfolio-->
-		<script src="assets/js/jquery.js"> </script>
-		<script src="assets/js/fly.js" type="text/javascript"></script>
-		<script type="text/javascript">
-			$(document).ready(function () {
-				$('#horizontalTab').easyResponsiveTabs({
-					type: 'default',           
-					width: 'auto', 
-					fit: true   
-				});
-			});		
-		</script>
-		
-				<link rel="stylesheet" href="css/jquery-ui.css" />
-				<script src=>"js/booking.js"</script>
-				  <script>
-						  $(function() {
-							$( "#datepicker,#datepicker1,#datepicker2,#datepicker3" ).datepicker();
-						  });
-				  </script>
-									<script>
-									$('.value-plus').on('click', function(){
-										var divUpd = $(this).parent().find('.value'), newVal = parseInt(divUpd.text(), 10)+1;
-										divUpd.text(newVal);
-									});
+            <!-- Main Toggles -->
+            <div class="col-lg-8 col-md-12 col-sm-12">
+              <div class="d-flex flex-column">
+                <div class="d-flex flex-row align-items-stretch text-center">
 
-									$('.value-minus').on('click', function(){
-										var divUpd = $(this).parent().find('.value'), newVal = parseInt(divUpd.text(), 10)-1;
-										if(newVal>=1) divUpd.text(newVal);
-									});
-									</script>
-								
-								<script>
-	$(document).ready(function () {
-		size_li = $("#myList li").size();
-		x=1;
-		$('#myList li:lt('+x+')').show();
-		$('#loadMore').click(function () {
-			x= (x+1 <= size_li) ? x+1 : size_li;
-			$('#myList li:lt('+x+')').show();
-		});
-		$('#showLess').click(function () {
-			x=(x-1<0) ? 1 : x-1;
-			$('#myList li').not(':lt('+x+')').hide();
-		});
-	});
-</script>
-</body>
-</html>
+
+                  <div class="port-item p-4 mr-1 mb-1 bg-white text-black" data-toggle="collapse" data-target="#home">
+                     <h4>Book flights</h4>
+                  </div>
+                  <div class="port-item p-4 mr-1 mb-1 bg-light text-primary" data-toggle="collapse" data-target="#resume">
+                      <h4>My Bookings</h4>
+                  </div>
+                  <div class="port-item p-4 mb-1 bg-light text-primary" data-toggle="collapse" data-target="#contact">
+                    <h4>Flight Status</h4>
+                  </div>
+                </div>
+              </div>
+
+              <!--Main toggle Area-->
+              <div id="home" class="collapse p-4 show bg-white">
+                <div class="d-flex flex-column">
+                  <div class="d-flex flex-row text-dark align-items-stretch text-center">
+
+                    <!--Nested Toggle Headings-->
+                    
+
+                    <div class="btn px-3 mr-1 sub-port-rt bg-primary text-white" data-toggle="collapse" data-target="#round-trip">
+                      <span>Round Trip</span>
+                    </div>
+                    <div class="btn px-4 ml-1 sub-port-ow bg-dark text-white" data-toggle="collapse" data-target="#one-way">
+                      <span>One Way</span>
+                    </div>
+                  </div>
+                </div>
+
+                <!--Nested Toggle Contend-->
+
+                <div class="div mt-3 collapse show" id="round-trip">
+                  <form class="search-form">
+                    <div class="form-row">
+                      <div class="col-sm-6 col-md-6 col-lg-6">
+                        <div class="form-group">
+                          <label for="departure">From:</label>
+                          <select class="form-control col-sm-12 col-md-12 col-lg-12" id="departure">
+                            <option>Dallas</option>
+                            <option>Los Angeles</option>
+                            <option>New York</option>
+                            <option>Seatle</option>
+                          </select>
+                        </div>
+                      </div>
+                      <div class="col-sm-6 col-md-6 col-lg-6">
+                        <div class="form-group">
+                          <label for="arrival">To:</label>
+                          <select class="form-control col-sm-12 col-md-12 col-lg-12" id="arrival">
+                            <option>Dallas</option> 
+                            <option>Los Angeles</option>
+                            <option>New York</option>
+                            <option>Seatle</option>
+                          </select>
+                        </div>
+                      </div>
+                  </div>
+                    
+
+                    <div class="form-row px-1">
+                      <div class="col-sm-4 col-md-4 col-lg-4">
+                        <div class="form-group">
+                          <label for="depart">Depart:</label>
+                        <input id="depart_date" type="date" class="col-sm-12 col-md-12 col-lg-12 form-control end-date text-center">
+                      </div>
+                      </div>
+                      <div class="col-sm-4 col-md-4 col-lg-4">
+                        <div class="form-group">
+                          <label for="return">Return:</label>
+                        <input id="returning_date" type="date" class="col-sm-12 col-md-12 col-lg-12 form-control end-date text-center ">
+                      </div>
+                      </div>
+                      <div class="col-sm-4 col-md-4 col-lg-4">
+                        <label for="passengers">Number of Passengers:</label>
+                        <select class="form-control col-sm-12 col-md-12 col-lg-12">
+                            <option>1</option> 
+                            <option>2</option>
+                            <option>3</option>
+                            <option>4</option>
+                          </select>
+                      </div>
+                    </div>
+                    <div class="form-group">
+                      <label for="roundtrip" class="text-white">Type of flight</label><br>
+                      <input type="radio" class="text-muted" name="rountt" value="1" checked> Round Trip
+                    </div>
+                    <button type="submit" class="btn btn-primary btn-block">Search Flights</button>
+                  </form>
+                </div>
+
+                <!-- This is One Way section -->
+                <div class="div mt-3 collapse" id="one-way">
+                  <form class="search-form">
+                   <div class="form-row">
+                      <div class="col-sm-6 col-md-6 col-lg-6">
+                        <div class="form-group">
+                          <label for="departure">From:</label>
+                          <select class="form-control col-sm-12 col-md-12 col-lg-12" id="departure">
+                            <option>Dallas</option>
+                            <option>Los Angeles</option>
+                            <option>New York</option>
+                            <option>Seatle</option>
+                          </select>
+                        </div>
+                      </div>
+                      <div class="col-sm-6 col-md-6 col-lg-6">
+                        <div class="form-group">
+                          <label for="arrival">To:</label>
+                          <select class="form-control col-sm-12 col-md-12 col-lg-12" id="arrival">
+                            <option>Dallas</option> 
+                            <option>Los Angeles</option>
+                            <option>New York</option>
+                            <option>Seatle</option>
+                          </select>
+                        </div>
+                      </div>
+                  </div>
+                    
+                    <div class="form-row">
+                      <div class="col-sm-6 col-md-6 col-lg-6">
+                        <div class="form-group">
+                          <label for="depart">Depart:</label>
+                        <input id="depart_date" type="date" class="col-sm-12 col-md-12 col-lg-12 form-control end-date text-center">
+                      </div>
+                      </div>
+                      <div class="col-sm-6 col-md-6 col-lg-6">
+                        <label for="passengers">Number of Passengers:</label>
+                        <select class="form-control col-sm-12 col-md-12 col-lg-12">
+                            <option>1</option> 
+                            <option>2</option>
+                            <option>3</option>
+                            <option>4</option>
+                          </select>
+                      </div>
+                    </div>
+                    
+                      
+                    <div class="m-auto">
+                      <div class="form-group">
+                        <label for="roundtrip">Type of flight</label><br>
+                        <input type="radio" name="rountt" value="0" checked>One Way<br>
+                      </div>
+                      <button type="submit" class="btn btn-primary m-auto btn-block">Search Flights</button>
+                    </div>
+                  </form>
+                </div>
+              </div>
+              <!-- RESUME -->
+              <div id="resume" class="collapse mt-3 bg-dark text-white">
+                <form class="form-inline find-reservation my-5">
+                  <div class="form-group mx-sm-3 mb-2">
+                    <label for="firstName" class="sr-only">FirstName</label>
+                    <input type="text" class="form-control" id="firstName" placeholder="First Name">
+                  </div>
+                  <div class="form-group mx-sm-3 mb-2">
+                    <label for="lastName" class="sr-only">LastName</label>
+                    <input type="text" class="form-control" id="lastName" placeholder="Last Name">
+                  </div>
+                  <div class="form-group mx-sm-3 mb-2">
+                    <label for="inputPassword2" class="sr-only">Email</label>
+                    <input type="email" class="form-control" id="email" placeholder="Email">
+                  </div>
+                  <button type="submit" class="btn btn-primary btn-block">Search</button>
+                </form>
+              </div>
+              <!-- WORK -->
+              <div id="work" class="collapse">
+
+              </div>
+              <div id="contact" class="collapse">
+
+              </div>
+            </div>
+
+
+            <div class="col-lg-4 d-none d-lg-block">
+              <h1 class="display-4 text-white"> <strong>FLYAWAY!</strong> A Texan Airline<strong> that travels
+                  with you!</strong></h1>
+              <div class="d-flex flex-row">
+                <div class="p-4 align-self-start">
+                  <i class="fa fa-check"></i>
+                </div>
+                <div class="p-4 align-self-end text-light">
+                  We created more legroom for you. Just sit back, relax, and enjoy your flight. More than 4 Destinations. Snacks and Drinks free. More Space Between Seats. Pet Friendly.
+                </div>
+              </div>
+            </div>
+
+
+          </div>
+        </header>
+
+      </div>
+    </div>
+  </div>
+  </div>
+</header>
