--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -4,178 +4,231 @@
     <div class="home-inner">
       <div class="container">
         <header id="main-header">
-
           <div class="row">
 
             <!-- Main Toggles -->
-            <div class="col-lg-5 col-md-7">
+            <div class="col-lg-8 col-md-12 col-sm-12">
               <div class="d-flex flex-column">
-                <div class="d-flex flex-row text-white align-items-stretch text-center">
+                <div class="d-flex flex-row align-items-stretch text-center">
 
 
-                  <div class="port-item p-4 mr-1 mb-1 bg-primary" data-toggle="collapse" data-target="#home">
-                    <span>Flight Reservation</span>
+                  <div class="port-item p-4 mr-1 mb-1 bg-white text-black" data-toggle="collapse" data-target="#tickets">
+                    <h4>Book flights</h4>
                   </div>
-                  <div class="port-item p-4 mr-1 mb-1 bg-dark" data-toggle="collapse" data-target="#resume">
-                    <span>My booking</span>
+                  <div class="port-item p-4 mr-1 mb-1 bg-light text-primary" data-toggle="collapse" data-target="#bookings">
+                    <h4>My Bookings</h4>
                   </div>
-                  <div class="port-item p-4  mr-1 mb-1 bg-dark" data-toggle="collapse" data-target="#work">
-                    <span>Check-In</span>
-                  </div>
-                  <div class="port-item p-4 mr-1 mb-1 bg-dark" data-toggle="collapse" data-target="#contact">
-                    <span>Flight Status</span>
+                  <div class="port-item p-4 mb-1 bg-light text-primary" data-toggle="collapse" data-target="#flightS">
+                    <h4>Flight Status</h4>
                   </div>
                 </div>
               </div>
 
               <!--Main toggle Area-->
-              <div id="home" class="collapse p-4 show bg-primary">
+              <div id="tickets" class="collapse p-4 show bg-white">
                 <div class="d-flex flex-column">
                   <div class="d-flex flex-row text-dark align-items-stretch text-center">
 
                     <!--Nested Toggle Headings-->
-                    <div class="p-1 bg-primary" data-toggle="collapse" data-target="#">
-                    </div>
-
-                    <div class="p-1 sub-port-rt bg-dark text-white" data-toggle="collapse" data-target="#round-trip">
+                    <div class="btn px-3 mr-1 sub-port-rt bg-primary text-white" data-toggle="collapse" data-target="#round-trip">
                       <span>Round Trip</span>
                     </div>
-                    <div class="p-1 sub-port-ow bg-white" data-toggle="collapse" data-target="#one-way">
+                    <div class="btn px-4 ml-1 sub-port-ow bg-dark text-white" data-toggle="collapse" data-target="#one-way">
                       <span>One Way</span>
-                    </div>
-                    <div class="port-item p-1 bg-primary" data-toggle="collapse" data-target="#">
                     </div>
                   </div>
                 </div>
 
                 <!--Nested Toggle Contend-->
 
-                <div class="div mt-3 collapse show" id="round-trip">
-                  <form class="search-form">
-                    <div class="form-group ">
-                      <select class="form-control" id="departure">
-                        <option>Dallas</option>
-                        <option>Los Angeles</option>
-                        <option>New York</option>
-                        <option>Seatle</option>
-                      </select>
-                    </div>
+                <div class="mt-3 collapse show" id="round-trip">
+                  <form class="search-form-rt">
+                    <div class="form-row">
+                      <div class="col-sm-6 col-md-6 col-lg-6">
+                        <div class="form-group">
+                          <label for="departure">From:</label>
 
-                    <div class="form-group">
-                      <select class="form-control" id="arrival">
-                        <option>Dallas</option>
-                        <option>Los Angeles</option>
-                        <option>New York</option>
-                        <option>Seatle</option>
-                      </select>
+                          <select class=" selectpicker form-control col-sm-12 col-md-12 col-lg-12" id="departure">
+                            <option data-icon="glyphicon glyphicon-eye-open">Dallas</option>
+                            <option>Los Angeles</option>
+                            <option>New York</option>
+                            <option>Seatle</option>
+                          </select>
+                        </div>
+                      </div>
+                      <div class="col-sm-6 col-md-6 col-lg-6">
+                        <div class="form-group">
+                          <label for="arrival">To:</label>
+                          <select class="form-control col-sm-12 col-md-12 col-lg-12" id="arrival">
+                            <option>Dallas</option>
+                            <option>Los Angeles</option>
+                            <option>New York</option>
+                            <option>Seatle</option>
+                          </select>
+                        </div>
+                      </div>
                     </div>
 
                     <div class="form-row px-1">
-                      <div class="form-group">
-                        <input id="depart_date" type="date" class="form-control end-date text-center">
+                      <div class="col-sm-4 col-md-4 col-lg-4">
+                        <div class="form-group">
+                          <label for="depart">Depart:</label>
+                          <input id="depart_date" type="date" class="col-sm-12 col-md-12 col-lg-12 form-control end-date text-center">
+                        </div>
                       </div>
-                      <div class="form-group">
-                        <input id="returning_date" type="date" class="form-control end-date text-center ">
+                      <div class="col-sm-4 col-md-4 col-lg-4">
+                        <div class="form-group">
+                          <label for="return">Return:</label>
+                          <input id="returning_date" type="date" class="col-sm-12 col-md-12 col-lg-12 form-control end-date text-center ">
+                        </div>
+                      </div>
+                      <div class="col-sm-4 col-md-4 col-lg-4">
+                        <label for="passengers">Number of Passengers:</label>
+                        <select class="form-control col-sm-12 col-md-12 col-lg-12">
+                          <option>1</option>
+                          <option>2</option>
+                          <option>3</option>
+                          <option>4</option>
+                        </select>
                       </div>
                     </div>
                     <div class="form-group">
                       <label for="roundtrip" class="text-white">Type of flight</label><br>
                       <input type="radio" class="text-muted" name="rountt" value="1" checked> Round Trip
                     </div>
-                    <button type="submit" class="btn btn-dark btn-block">Search Flights</button>
+                    <button type="submit" class="btn btn-primary btn-block">Search Flights</button>
                   </form>
-
                 </div>
 
-
+                <!-- This is One Way section -->
                 <div class="div mt-3 collapse" id="one-way">
-                  <form class="search-form">
-                    <div class="form-group ">
-                      <select class="form-control" id="departure">
-                        <option>Dallas</option>
-                        <option>Los Angeles</option>
-                        <option>New York</option>
-                        <option>Seatle</option>
-                      </select>
+                  <form class="search-form-ow">
+                    <div class="form-row">
+                      <div class="col-sm-6 col-md-6 col-lg-6">
+                        <div class="form-group">
+                          <label for="departure">From:</label>
+                          <select class="form-control col-sm-12 col-md-12 col-lg-12" id="departure-ow">
+                            <option>Dallas</option>
+                            <option>Los Angeles</option>
+                            <option>New York</option>
+                            <option>Seatle</option>
+                          </select>
+                        </div>
+                      </div>
+                      <div class="col-sm-6 col-md-6 col-lg-6">
+                        <div class="form-group">
+                          <label for="arrival">To:</label>
+                          <select class="form-control col-sm-12 col-md-12 col-lg-12" id="arrival-ow">
+                            <option>Dallas</option>
+                            <option>Los Angeles</option>
+                            <option>New York</option>
+                            <option>Seatle</option>
+                          </select>
+                        </div>
+                      </div>
                     </div>
-                    <div class="form-group">
-                      <select class="form-control" id="arrival">
-                        <option>New York</option>
-                        <option>Dallas</option>
-                        <option>Los Angeles</option>
-                        <option>Seatle</option>
-                      </select>
-                    </div>
-                    <div class="form-group">
-                      <input id="depart_date" type="date" class="form-control end-date text-center p-3">
+                    <div class="form-row">
+                      <div class="col-sm-6 col-md-6 col-lg-6">
+                        <div class="form-group">
+                          <label for="depart">Depart:</label>
+                          <input id="depart_date-ow" type="date" class="col-sm-6 col-md-12 col-lg-12 form-control end-date text-center">
+                        </div>
+                      </div>
+                      <div class="col-sm-6 col-md-6 col-lg-6">
+                        <label for="passengers">Number of Passengers:</label>
+                        <select class="form-control col-sm-6 col-md-12 col-lg-12">
+                          <option>1</option>
+                          <option>2</option>
+                          <option>3</option>
+                          <option>4</option>
+                        </select>
+                      </div>
                     </div>
                     <div class="m-auto">
                       <div class="form-group">
                         <label for="roundtrip">Type of flight</label><br>
                         <input type="radio" name="rountt" value="0" checked>One Way<br>
                       </div>
-                      <button type="submit" class="btn btn-dark m-auto btn-block">Search Flights</button>
+                      <button type="submit" class="btn btn-primary m-auto btn-block">Search Flights</button>
                     </div>
                   </form>
                 </div>
               </div>
               <!-- RESUME -->
-              <div id="resume" class="collapse mt-3 bg-dark text-white">
-                <form class="form-inline find-reservation my-5">
-                  <div class="form-group mx-sm-3 mb-2">
-                    <label for="firstName" class="sr-only">FirstName</label>
-                    <input type="text" class="form-control" id="firstName" placeholder="First Name">
-                  </div>
-                  <div class="form-group mx-sm-3 mb-2">
-                    <label for="lastName" class="sr-only">LastName</label>
-                    <input type="text" class="form-control" id="lastName" placeholder="Last Name">
-                  </div>
-                  <div class="form-group mx-sm-3 mb-2">
-                    <label for="inputPassword2" class="sr-only">Email</label>
-                    <input type="email" class="form-control" id="email" placeholder="Email">
+              <div id="bookings" class="collapse mt-1 p-5 bg-white text-dark">
+                <form action="" class="find-reservation">
+                  <div class="form-row">
+                    <div class="col-sm-4 col-md-4 col-lg-4">
+                      <div class="form-group mx-sm-3 mb-2">
+                        <label for="firstName" class="sr-only">FirstName</label>
+                        <input type="text" class="form-control" id="firstName" placeholder="First Name">
+                      </div>
+                    </div>
+                    <div class="col-sm-4 col-md-4 col-lg-4">
+                      <div class="form-group mx-sm-3 mb-2">
+                        <label for="lastName" class="sr-only">LastName</label>
+                        <input type="text" class="form-control" id="lastName" placeholder="Last Name">
+                      </div>
+                    </div>
+                    <div class="col-sm-4 col-md-4 col-lg-4">
+                      <div class="form-group mx-sm-3 mb-2">
+                        <label for="inputPassword2" class="sr-only">Email</label>
+                        <input type="email" class="form-control" id="email" placeholder="Email">
+                      </div>
+                    </div>
                   </div>
                   <button type="submit" class="btn btn-primary btn-block">Search</button>
                 </form>
               </div>
               <!-- WORK -->
-              <div id="work" class="collapse">
-
-              </div>
-              <div id="contact" class="collapse">
+              <div id="flightS" class="collapse p-4 bg-white text-dark">
+                <form action="" class="find-flightStatus">
+                  <div class="form-row">
+                    <div class="col-sm-4 col-md-4 col-lg-4">
+                      <div class="form-group mx-sm-3 mb-2">
+                        <input type="text" class="form-control" id="flightIdNumber" placeholder="Flight ID">
+                      </div>
+                    </div>
+                    <div class="col-sm-4 col-md-4 col-lg-4">
+                      <div class="form-group mx-sm-3 mb-2">
+                        <input type="text" class="form-control" id="bookingNumber" placeholder="Booking Number">
+                      </div>
+                    </div>
+                    <div class="col-sm-4 col-md-4 col-lg-4">
+                      <div class="form-group mx-sm-3 mb-2">
+                        <label for="lastName" class="sr-only">LastName</label>
+                        <input type="text" class="form-control" id="bookingEmail" placeholder="Email">
+                      </div>
+                    </div>
+                  </div>
+                  <button type="submit" class="btn btn-primary btn-block">Search</button>
+                </form>
 
               </div>
             </div>
 
 
-            <div class="col-lg-7 d-none d-lg-block">
-              <h1 class="display-4 text-white"> <strong>FLYAWAY!</strong> A Texan Airline<strong> that travels
-                  with you!</strong></h1>
-              <div class="d-flex flex-row">
-                <div class="p-4 align-self-start">
-                  <i class="fa fa-check"></i>
-                </div>
-                <div class="p-4 align-self-end text-light">
-                  We created more legroom for you. Just sit back, relax, and enjoy your flight
-                </div>
-              </div>
-              <div class="d-flex flex-row">
-                <div class="p-4 align-self-start">
-                  <i class="fa fa-check"></i>
-                </div>
-                <div class="p-4 align-self-end text-light">
-                  More than 4 Destinations. Snacks and Drinks free. More Space Between Seats. Pet Friendly.
-                </div>
-              </div>
-              <div class="d-flex flex-row">
-                <div class="p-4 align-self-start">
-                  <i class="fa fa-check"></i>
-                </div>
-                <div class="p-4 align-self-end text-light">
-                  In the United Sates, FlyAway flies into Los Angeles (LAX), Dallas (DFW), Seatle, and JFK Airport in
-                  New York
-                </div>
-              </div>
+            <div class="col-lg-4 bg-dark rounded p-4 d-none text-center d-lg-block">
+              <h1 class="display-3 text-white"> <strong> FlyAway! </strong>
 
+              </h1>
+              <h2 class="text-center display-4 text-light">
+
+                A Texan Airline<strong> that travels
+                  with you!</strong>
+              </h2>
+              <p class="text-warning">
+                We created more legroom for you.
+              </p>
+              {{!-- <div class="d-flex text-center display-5 text-light flex-row">
+                <p class="text-center display-2">
+
+                  A Texan Airline<strong> that travels
+                    with you!</strong>
+                </p>
+                We created more legroom for you.
+                </p>
+              </div> --}}
             </div>
 
 
