changed btn-primary to danger and added more seeds

--- a/views/reservation.handlebars
+++ b/views/reservation.handlebars
@@ -13,7 +13,7 @@
       <br>
       <p class="card-text"> ARRIVES: {{arrival_time}}</p>
       <p class="card-text"> AIRPORT: {{arrival_airport}} {{arrive_place}}</p>
-      <button type="submit" class="btn btn-primary delete-res" data-id="{{this.booking_number}}">Cancel Reservation</button>
+      <button type="submit" class="btn btn-danger delete-res" data-id="{{this.booking_number}}">Cancel Reservation</button>
     </div>
     <div class="card-footer text-muted">
       If you have any questions about your refund request, email us at info@flyaway.com or contact our call center.​​
